# todo-list-blazing-fast

backend/: Cargo.toml
backend/migrations/: 20230920201017_init.sql
backend/src/: db.rs  main.rs  responses.rs
frontend/: .proxyrc  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  TodoList.tsx  index.html  index.tsx  remote.ts
