[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
actix-web-lab = "0.19.1"
env_logger = "0.10.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sqlx = { version = "0.7.1", features = [ "runtime-tokio-rustls", "sqlite", "macros" ] }
tokio = "1.32.0"
uuid = { version = "1.4.1", features = ["v4"] }

[dev-dependencies]
sqlx-cli = { version = "0.7.1", features = ["sqlite"] }
